// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-brizz destination: identifyUser action - all fields 1`] = `
Object {
  "attributes": Object {
    "brizz.anonymous_id": "8xjDY9]pa&0Jt0r&(",
    "brizz.user_id": "8xjDY9]pa&0Jt0r&(",
    "segment.event_type": "identify",
    "segment.message_id": "8xjDY9]pa&0Jt0r&(",
  },
  "body": Object {
    "testType": "8xjDY9]pa&0Jt0r&(",
  },
  "environment": "8xjDY9]pa&0Jt0r&(",
  "name": "identify",
  "service_name": "8xjDY9]pa&0Jt0r&(",
  "session_id": "8xjDY9]pa&0Jt0r&(",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-brizz destination: identifyUser action - required fields 1`] = `
Object {
  "attributes": Object {
    "segment.event_type": "identify",
  },
  "environment": "8xjDY9]pa&0Jt0r&(",
  "name": "identify",
  "service_name": "8xjDY9]pa&0Jt0r&(",
  "session_id": "unknown",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2026-02-18T10:00:52.220Z",
}
`;

exports[`Testing snapshot for actions-brizz destination: trackEvent action - all fields 1`] = `
Object {
  "attributes": Object {
    "brizz.anonymous_id": "#DM^Zh",
    "brizz.user_id": "#DM^Zh",
    "segment.event_type": "track",
    "segment.message_id": "#DM^Zh",
  },
  "body": Object {
    "testType": "#DM^Zh",
  },
  "environment": "#DM^Zh",
  "name": "#DM^Zh",
  "service_name": "#DM^Zh",
  "session_id": "#DM^Zh",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-brizz destination: trackEvent action - required fields 1`] = `
Object {
  "attributes": Object {
    "segment.event_type": "track",
  },
  "environment": "#DM^Zh",
  "name": "#DM^Zh",
  "service_name": "#DM^Zh",
  "session_id": "unknown",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2026-02-18T10:00:52.194Z",
}
`;

exports[`Testing snapshot for actions-brizz destination: trackGroupEvent action - all fields 1`] = `
Object {
  "attributes": Object {
    "brizz.anonymous_id": "w@PQ)",
    "brizz.user_id": "w@PQ)",
    "segment.event_type": "group",
    "segment.message_id": "w@PQ)",
  },
  "body": Object {
    "group_id": "w@PQ)",
    "testType": "w@PQ)",
  },
  "environment": "w@PQ)",
  "name": "group",
  "service_name": "w@PQ)",
  "session_id": "w@PQ)",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-brizz destination: trackGroupEvent action - required fields 1`] = `
Object {
  "attributes": Object {
    "segment.event_type": "group",
  },
  "body": Object {
    "group_id": "w@PQ)",
  },
  "environment": "w@PQ)",
  "name": "group",
  "service_name": "w@PQ)",
  "session_id": "unknown",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2026-02-18T10:00:52.265Z",
}
`;

exports[`Testing snapshot for actions-brizz destination: trackPageView action - all fields 1`] = `
Object {
  "attributes": Object {
    "brizz.anonymous_id": "sNJ(8OdawC[d6#bx",
    "brizz.user_id": "sNJ(8OdawC[d6#bx",
    "segment.event_type": "page",
    "segment.message_id": "sNJ(8OdawC[d6#bx",
  },
  "body": Object {
    "category": "sNJ(8OdawC[d6#bx",
    "testType": "sNJ(8OdawC[d6#bx",
  },
  "environment": "sNJ(8OdawC[d6#bx",
  "name": "page.sNJ(8OdawC[d6#bx",
  "service_name": "sNJ(8OdawC[d6#bx",
  "session_id": "sNJ(8OdawC[d6#bx",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for actions-brizz destination: trackPageView action - required fields 1`] = `
Object {
  "attributes": Object {
    "segment.event_type": "page",
  },
  "body": Object {},
  "environment": "sNJ(8OdawC[d6#bx",
  "name": "page_view",
  "service_name": "sNJ(8OdawC[d6#bx",
  "session_id": "unknown",
  "severity_number": 9,
  "source": "segment",
  "timestamp": "2026-02-18T10:00:52.257Z",
}
`;
